2009-06-04  Vivien Malerba <malerba@gnome-db.org>

	* libgda/sqlite/gda-sqlite-provider.c:
	  - when adding ROWID columns in a SELECT statement, make sure to also
	    modify ORDER BY clauses if necessary
	  - don't add ROWID clauses if there is a DISTINCT clause
	  - fixed rendering of SELECT statements when a COMPOUND statement is used
	    as the FROM part of another statement

2009-04-19  Vivien Malerba <malerba@gnome-db.org>

	* libgda-report/RML/trml2html/Makefile.am:
	* libgda-report/RML/trml2pdf/Makefile.am: applied patch
	for bug #579458 (Gilles Dartiguelongue)

2009-04-18  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set version to 4.0.3

Released 4.0.2

2009-04-18  Vivien Malerba <malerba@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c: display a warning when
	the PostgreSQL provider does not identify any data type

2009-04-17  Vivien Malerba <malerba@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c: fix for bug #578748
	* libgda/sqlite/gda-sqlite.h:
	* libgda/sqlite/gda-sqlite-meta.c:
	* libgda/sqlite/gda-sqlite-provider.c: make the SQLite provider
	compile with a system installed SQLite
	* configure.in: a system installed SQLite is now only searched for if the
	--enable-system-sqlite option is passed, and the presence of the sqlite3CreateFunc
	symbol is not anymore required. The only drawback of using a system installed
	SQLite is that meta data regarding functions will not be available
	* libgda/handlers/gda-handler-time.c: fix mem leak

2009-04-07  Vivien Malerba <malerba@gnome-db.org>

	* configure.in:
	  - set version to 4.0.2
	  - detect uint8_t presence
	* libgda/gda-meta-store.c:
	  - correction in gda_meta_store_schema_get_structure()
	  - correction in the "cnc" property
	* tools/web-server.c: don't check for uint8_t
	* doc/C: doc. updates

Released 4.0.1

2009-03-27  Vivien Malerba <malerba@gnome-db.org>

	* libgda/libgda.symbols: removed the gda_transaction_status_dump
	symbol